fix ui spacing, dynamic font, and change the tag line

--- a/_sass/components/_article-header.scss
+++ b/_sass/components/_article-header.scss
@@ -9,6 +9,7 @@
   }
   h1 {
     word-wrap: break-word;
+    line-height: 1.4em;
   }
   .split-space {
     @include user-select(none);
